fixed some z-index issues with values

--- a/static/css/game.css
+++ b/static/css/game.css
@@ -94,7 +94,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     pointer-events: none;
-    z-index: 0;
+    z-index: -1;
 }
 
 .top-left-value {
@@ -104,7 +104,7 @@ body {
     left: 20%;
     transform: translate(-50%, -50%);
     pointer-events: none;
-    z-index: 0;
+    z-index: -1;
 }
 
 .bottom-right-value{
@@ -114,7 +114,7 @@ body {
     left: 80%;
     transform: translate(-50%, -50%) scaleX(-1) rotateX(180deg);
     pointer-events: none;
-    z-index: 0;
+    z-index: -1;
 }
 
 #game-info{
